src/components/Info/Info.module.scss
@import '~styles/mixins';

.info {
  padding-top: 48px;
  padding-bottom: 48px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  @include b-up(xxl) {
    padding-top: 232px;
    padding-bottom: 268px;
    align-items: end;
  }
  @include b-d(xl) {
    flex-direction: column-reverse;
    align-items: center;
  }
  &:nth-child(-n + 2) {
    @include b-d(xxl) {
      padding-top: 28px;
    }
  }
  & + & + & {
    @include b-d(xxl) {
      padding-bottom: 96px;
    }
    @include b-up(xl) {
      h2 {
        white-space: nowrap;
        max-width: 240px;
      }
    }
  }
  &__content {
    z-index: 2;
    @include b-d(xl) {
      margin-top: -62px;
      display: grid;
      justify-items: center;
      text-align: center;
      max-width: 904px;
    }
    @include b-d(lg) {
      margin-top: -36px;
    }
    @include b-d(md) {
      margin-top: 22px;
    }
    p {
      margin-bottom: 43px;
      @include b-up(xxl) {
        margin-bottom: 83px;
      }
      @include b-up(xl) {
        max-width: 530px;
      }
      @include b-d(md) {
        margin-bottom: 32px;
      }
    }
  }
  &__img {
    flex: 0 0 auto;
  }
}

.anim {
  position: relative;
  display: inline-block;
  width: 0.59em * 13;
  vertical-align: top;
  @include b-up(md) {
    margin-left: 0.6em;
  }
  span {
    position: absolute;
    top: 0;
    left: 0;
    &:not(:first-child) {
      opacity: 0;
      transform: translateY(30px);
    }
    &:last-child {
      @include b-d(md) {
        left: 50%;
        transform: translate(-50%, 30px);
      }
    }
  }
}

